<resources>
    <string name="app_name">JET</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- Navigation Drawer menu labels -->
    <string name="home_nav">Home</string>
    <string name="account_nav">Account</string>
    <string name="groups_nav">Groups</string>
    <string name="restaurants_nav">Restaurants</string>
    <string name="events_nav">Events</string>
    <string name="action_settings">Settings</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Account</item>
        <item>Restaurants</item>
        <item>Groupes</item>
        <item>Events</item>
    </string-array>



    <string name="action_signout">Sign out</string>

    <!-- FB Access -->
    <string name="facebook_app_id">1216695078410326</string>
    <string name="search_friend_hint">Search friend...</string>

    <!-- URL -->
    <string name="url_data_php">http://192.168.43.120/2i/APP2/projetmobile/data.php</string>


</resources>
