<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/home_icon"
            android:title="@string/home_nav" />

        <item
            android:id="@+id/account"
            android:checked="false"
            android:icon="@drawable/account_logo"
            android:title="@string/account_nav" />

        <item
            android:id="@+id/restaurants"
            android:checked="false"
            android:icon="@drawable/restaurant_icon"
            android:title="@string/restaurants_nav" />

        <item
            android:id="@+id/groups"
            android:checked="false"
            android:icon="@drawable/friends_icons"
            android:title="@string/groups_nav" />

        <item
            android:id="@+id/events"
            android:checked="false"
            android:icon="@drawable/events_logo"
            android:title="@string/events_nav" />

        </group>
    </menu>